docker-kubernetes/kubernetes-for-developers/ch07-networking/02-ingress/robohash-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robohash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robohash
  template:
    metadata:
      labels:
        app: robohash
    spec:
      containers:
        - name: robohash-container
          image: docker.io/wdenniss/robohash:1
