docker-kubernetes/kubernetes-for-developers/ch07-networking/02-ingress/timeserver-service-internal.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: timeserver-internal
spec:
  selector:
    pod: timeserver-pod
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
