docker-kubernetes/kubernetes-for-developers/ch07-networking/02-ingress/ingress_path.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timeserver-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timeserver-internal
                port:
                  number: 80
          - path: /robohash
            pathType: Prefix
            backend:
              service:
                name: robohash-internal
                port:
                  number: 80
